--- a/extension/index.html
+++ b/extension/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Street Art Tab</title>
+    <title>New Tab</title>
   </head>
   <body>
     <span id="photo">
